--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
        ============================================= -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Science Station | National Science Day Interactive Booth</title>
-  <meta name="description" content="Science Station brings National Science Day to life with VR experiences, titration demos, Raman Effect concepts, and science memes. From Lab to Launchpad!" />
+  <title>Science Station – National Science Day 2026 Interactive Science Exhibition Booth</title>
+  <meta name="description" content="Experience Science Station at National Science Day 2026 – an interactive science exhibition booth featuring live titration demonstrations,
+    Raman Effect concepts, immersive VR science experiences, and educational science memes." />
+  <meta name="keywords" content="National Science Day 2026, science exhibition booth, interactive science stall, 
+    Raman Effect demo, titration experiment, VR science experience, science memes explained" />
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "Science Station – National Science Day 2026",
+  "description": "An interactive science exhibition booth featuring VR experiences, titration demos, Raman Effect concepts and science memes.",
+  "eventStatus": "https://schema.org/EventScheduled",
+  "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode"
+}
+</script>
   <!-- Preconnect for Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -66,7 +79,7 @@
       <h2 id="about-heading" class="section-title">
         Redefining How<br /><span class="accent-purple">Science Feels</span>
       </h2>
-      <p class="about-text", >
+      <p class="about-text">
         Science Station is an immersive, interactive celebration of discovery.
         Step inside a world where <strong>Virtual Reality</strong> lets you shrink
         to molecular scale, where a live <strong>Titration Demonstration</strong>
