--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
   <meta property="og:title" content="Science Station – National Science Day 2026">
 <meta property="og:description" content="Interactive science exhibition booth with VR, Raman Effect, and live titration demonstrations.">
 <meta property="og:type" content="website">
+  <meta property="og:image" content="https://yourdomain.com/assets/preview.jpg">
+<meta property="og:url" content="https://yourdomain.com/">
+<meta property="og:type" content="website">
+
+  <link rel="icon" type="image/png" href="favicon.png">
   
   <style>
     /* Navigation Styles */
@@ -230,7 +235,7 @@
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="blog.html" class="nav-link">Blog</a></li>
         <li><a href="contact.html" class="nav-link">Contact</a></li>
-        <li><a href="#features" class="nav-link">Exhibits</a></li>
+        <li><a href="#features" class="nav-link">Science Exhibits</a></li>
         <li><a href="#quiz" class="nav-link">Quiz</a></li>
       </ul>
     </div>
@@ -253,9 +258,9 @@
 
       <!-- ONE H1 on the entire page -->
       <h1 class="hero-title">
-        Science<br /><span class="accent-neon">Station</span>
-      </h1>
-
+  Science Station – National Science Day 2026<br />
+  <span class="accent-neon">Interactive Science Exhibition Booth</span>
+</h1>
       <p class="hero-sub">From Lab to Launchpad</p>
       <p class="hero-tagline">
         Where memes meet molecules, and experiments meet experience.
@@ -285,7 +290,10 @@
         Redefining How<br /><span class="accent-purple">Science Feels</span>
       </h2>
       <p class="about-text">
-        Science Station is an immersive, interactive celebration of discovery.
+        <p class="about-text">
+Science Station is an interactive science exhibition booth designed for National Science Day 2026. This immersive experience combines live titration demonstrations, 
+          Raman Effect concept exploration, VR science simulations, and educational science memes to make scientific learning engaging and memorable.
+</p>
         Step inside a world where <a href="blog.html#vr-science" class="inline-link"><strong>Virtual Reality in Science Education</strong></a> lets you shrink
         to molecular scale, where a live <strong>Titration Demonstration</strong>
         shows chemistry happening in real time, and where the
