--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
         <a href="#quiz" class="btn btn-outline">Take the Quiz</a>
       </div>
 
+<section class="intro-seo">
+  <p>
+    Science Station is a National Science Day 2026 science exhibition booth featuring live chemistry demonstrations, 
+    Raman Effect experiments, immersive VR learning, and interactive educational experiences designed for students and 
+    science enthusiasts.
+  </p>
+</section>
+
       <!-- Scroll indicator -->
       <div class="scroll-hint" aria-hidden="true">
         <span></span>
@@ -286,7 +294,7 @@ Science Station is an interactive science exhibition booth designed for National
     <p class="footer-sub">From Lab to Launchpad — Celebrating the spirit of discovery.</p>
   </footer>
 
-  <script>
+  <script defer>
     // Mobile menu toggle
     function toggleMenu() {
       const navMenu = document.getElementById('navMenu');
