--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     science enthusiasts.
   </p>
 </section>
+      <section class="about" id="about">
 
       <!-- Scroll indicator -->
       <div class="scroll-hint" aria-hidden="true">
