--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
       <span class="hero-eyebrow">National Science Day 2026</span>
 
       <!-- ONE H1 on the entire page -->
+   <!-- ONE H1 on the entire page -->
       <h1 class="hero-title">
-  Science Station – National Science Day 2026<br />
-  <span class="accent-neon">Interactive Science Exhibition Booth</span>
-</h1>
+        Science<br /><span class="accent-neon">Station</span>
+      </h1>
+      
       <p class="hero-sub">From Lab to Launchpad</p>
       <p class="hero-tagline">
         Where memes meet molecules, and experiments meet experience.
