--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta name="keywords" content="National Science Day 2026, science exhibition booth, interactive science stall, 
     Raman Effect demo, titration experiment, VR science experience, science memes explained" />
 
+  <meta name="google-site-verification" content="2whmG4C4TLPjBYQ-kxrLXzUNFqwLRfiEMMRJXEBq3P8" />
+
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
