--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
 
       <!-- ONE H1 on the entire page -->
    <!-- ONE H1 on the entire page -->
-      <h1 class="hero-title">
-        Science<br /><span class="accent-neon">Station</span>
-      </h1>
+    <h1>
+National Science Day 2026 Interactive Science Exhibition – Science Station
+</h1>
       
       <p class="hero-sub">From Lab to Launchpad</p>
       <p class="hero-tagline">
