--- a/index.html
+++ b/index.html
@@ -26,19 +26,18 @@
 
 </script>
 
-   <script type="application/ld+json">
+  <script type="application/ld+json">
 {
  "@context": "https://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [{
    "@type": "ListItem",
    "position": 1,
-   "name": "Home",
-   "item": "https://yourgithubusername.github.io/"
+   "name": "Science Station",
+   "item": "https://mmegakalai19-bit.github.io/science-station/"
  }]
 }
 </script>
-  
   <!-- Preconnect for Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -50,8 +49,8 @@
   <meta property="og:title" content="Science Station – National Science Day 2026">
 <meta property="og:description" content="Interactive science exhibition booth with VR, Raman Effect, and live titration demonstrations.">
 <meta property="og:type" content="website">
-  <meta property="og:image" content="https://yourdomain.com/assets/preview.jpg">
-<meta property="og:url" content="https://yourdomain.com/">
+ <meta property="og:url" content="https://mmegakalai19-bit.github.io/science-station/">
+<meta property="og:image" content="https://mmegakalai19-bit.github.io/science-station/favicon.png">
 <meta property="og:type" content="website">
 
   <link rel="icon" type="image/png" href="favicon.png">
@@ -243,6 +242,33 @@
   color: rgba(255, 255, 255, 0.85);
   line-height: 1.8;
 }
+
+     /* Local SEO Section */
+.local-seo {
+  padding: 80px 20px;
+  background: rgba(10, 10, 20, 0.6);
+}
+
+.local-seo-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.local-seo h2 {
+  font-family: 'Orbitron', sans-serif;
+  font-size: clamp(1.6rem, 3vw, 2rem);
+  color: #00f0ff;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+
+.local-seo p {
+  font-family: 'Exo 2', sans-serif;
+  font-size: clamp(1rem, 1.4vw, 1.1rem);
+  color: rgba(255, 255, 255, 0.85);
+  line-height: 1.8;
+}
   </style>
   
 </head>
@@ -322,11 +348,12 @@ National Science Day 2026 Interactive Science Exhibition – Science Station
       <h2 id="about-heading" class="section-title">
         Redefining How<br /><span class="accent-purple">Science Feels</span>
       </h2>
-      <p class="about-text">
+     
         <p class="about-text">
 Science Station is an interactive science exhibition booth designed for National Science Day 2026. This immersive experience combines live titration demonstrations, 
           Raman Effect concept exploration, VR science simulations, and educational science memes to make scientific learning engaging and memorable.
 </p>
+       <p class="about-text">
         Step inside a world where <a href="blog.html#vr-science" class="inline-link"><strong>Virtual Reality in Science Education</strong></a> lets you shrink
         to molecular scale, where a live <strong>Titration Demonstration</strong>
         shows chemistry happening in real time, and where the
@@ -422,7 +449,15 @@ Science Station is an interactive science exhibition booth designed for National
     </p>
   </div>
 </section>
-
+  <section>
+  <section class="local-seo">
+  <div class="local-seo-inner">
+    <h2>National Science Day 2026 Science Exhibition in Chennai</h2>
+    <p>
+      Science Station is part of the National Science Day 2026 science exhibition initiative, designed to promote hands-on learning, digital integration, and experimental thinking among students in Chennai.
+    </p>
+  </div>
+</section>
   <!-- =============================================
        SCIENCE + DIGITAL SECTION
        ============================================= -->
