--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
        ============================================= -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Science Station – National Science Day 2026 Interactive Science Exhibition Booth</title>
+ <title>
+Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
+</title>
   <meta name="description" content="Experience Science Station at National Science Day 2026 – an interactive science exhibition booth featuring live titration demonstrations,
     Raman Effect concepts, immersive VR science experiences, and educational science memes." />
   <meta name="keywords" content="National Science Day 2026, science exhibition booth, interactive science stall, 
@@ -314,8 +316,8 @@
 
       <!-- ONE H1 on the entire page -->
    <!-- ONE H1 on the entire page -->
-    <h1>
-National Science Day 2026 Interactive Science Exhibition – Science Station
+   <h1>
+Science Station – ZS Trade Show 2026 National Science Day Exhibition
 </h1>
       
       <p class="hero-sub">From Lab to Launchpad</p>
@@ -449,15 +451,15 @@ Science Station is an interactive science exhibition booth designed for National
     </p>
   </div>
 </section>
-  <section>
+  
   <section class="local-seo">
   <div class="local-seo-inner">
-    <h2>National Science Day 2026 Science Exhibition in Chennai</h2>
+    <h2>Science Station at ZS Trade Show 2026 Chennai</h2>
     <p>
-      Science Station is part of the National Science Day 2026 science exhibition initiative, designed to promote hands-on learning, digital integration, and experimental thinking among students in Chennai.
+      Science Station is proudly presented at the ZS Trade Show 2026 in Chennai as part of the National Science Day celebration. This interactive science exhibition features live titration demonstrations, Raman Effect experiments, immersive VR learning, and hands-on scientific exploration.
     </p>
   </div>
-  </section>
+</section>
   <!-- =============================================
        SCIENCE + DIGITAL SECTION
        ============================================= -->
