--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
     Raman Effect demo, titration experiment, VR science experience, science memes explained" />
 
   <meta name="google-site-verification" content="2whmG4C4TLPjBYQ-kxrLXzUNFqwLRfiEMMRJXEBq3P8" />
+  <meta name="google-site-verification" content="wxtNDGMtQQc3NZcBytH3ipyzdHbHmURha-dZsEk5GqA" />
 
   <script type="application/ld+json">
 {
