--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Exo+2:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="index.css"/>
-  <link rel="canonical" href="https://mmegakalai19-bit.github.io/science-station/" />
-
+ <link rel="canonical" href="https://science-station.vercel.app//" />
+  
   <meta property="og:title" content="Science Station – National Science Day 2026">
 <meta property="og:description" content="Interactive science exhibition booth with VR, Raman Effect, and live titration demonstrations.">
 <meta property="og:type" content="website">
