--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
   <meta property="og:title" content="Science Station – National Science Day 2026">
 <meta property="og:description" content="Interactive science exhibition booth with VR, Raman Effect, and live titration demonstrations.">
 <meta property="og:type" content="website">
- <meta property="og:url" content="https://mmegakalai19-bit.github.io/science-station/">
-<meta property="og:image" content="https://mmegakalai19-bit.github.io/science-station/favicon.png">
+ <meta property="og:url" content="https://science-station.vercel.app/">
+<meta property="og:image" content="https://science-station.vercel.app/favicon.png">
 <meta property="og:type" content="website">
 
   <link rel="icon" type="image/png" href="favicon.png">
