--- a/about.html
+++ b/about.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About — Science Station</title>
+  <title>About Science Station | National Science Day 2026 Interactive Science Exhibition Chennai</title>
+
+  <meta name="description" content="Learn about Science Station, an interactive science exhibition presented at National Science Day 2026 in Chennai.
+    Featuring Raman Effect demonstrations, live titration experiments, VR science experiences, and hands-on exhibits.">
+  
   <link rel="stylesheet" href="about.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&family=DM+Sans:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet" />
+  <link rel="canonical" href="https://science-station.vercel.app/about.html" />
 </head>
 <body>
 
@@ -20,15 +25,18 @@
     <nav class="nav">
       <span class="nav__brand">Science Station</span>
       <ul class="nav__links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Events</a></li>
+       <li><a href="index.html">Home</a></li>
+       <li><a href="exhibits.html">Exhibits</a></li>
+        <li><a href="about.html" class="nav__active">About</a></li>
         <li><a href="#" class="nav__active">About</a></li>
       </ul>
     </nav>
 
     <div class="hero__content">
       <p class="hero__eyebrow">Who We Are</p>
-      <h1 class="hero__title">About<br /><em>Science Station</em></h1>
+      <h1 class="hero__title">
+About Science Station – National Science Day 2026 Interactive Exhibition
+</h1>
       <p class="hero__sub">Reimagining how science is experienced.</p>
       <div class="hero__line" aria-hidden="true"></div>
     </div>
@@ -40,6 +48,17 @@
     <!-- ═══════════════════════════════════════════
          WHY THIS INITIATIVE?
     ════════════════════════════════════════════════ -->
+
+    <section class="section">
+  <div class="section__inner">
+    <div class="section__body">
+      <p class="section__text section__text--large">
+        Science Station is an interactive science exhibition presented during National Science Day 2026 in Chennai. Designed to make science experiential and immersive, the initiative features Raman Effect demonstrations, live titration experiments, virtual reality simulations, and engaging scientific storytelling.
+      </p>
+    </div>
+  </div>
+</section>
+    
     <section class="section section--alt" id="why">
       <div class="section__inner">
         <div class="section__label">01</div>
@@ -148,8 +167,20 @@
         </div>
       </div>
     </section>
+    <!-- Explore More Section -->
+  <section class="section section--alt">
+    <div class="section__inner">
+      <div class="section__body">
+        <h2 class="section__title">Explore More</h2>
+        <p class="section__text">
+          Discover the full <a href="index.html">Science Station National Science Day 2026 Exhibition</a>, explore our <a href="exhibits.html">Interactive Science Exhibits</a>, or test your knowledge in our <a href="quiz.html">National Science Day Quiz</a>.
+        </p>
+      </div>
+    </div>
+  </section>
 
   </main>
+  
 
   <!-- ═══════════════════════════════════════════
        FOOTER
