--- a/about.html
+++ b/about.html
@@ -45,6 +45,22 @@ About Science Station – National Science Day 2026 Interactive Exhibition
 
   <main>
 
+    <section class="section">
+  <div class="section__inner">
+    <div class="section__body">
+
+      <p class="section__text section__text--large">
+        Science Station is an interactive science exhibition presented during National Science Day 2026 in Chennai. Designed to transform scientific learning into an immersive experience, the initiative features Raman Effect demonstrations, live titration experiments, virtual reality simulations, and hands-on scientific engagement for students and visitors.
+      </p>
+
+      <p class="section__text">
+        Presented as part of the ZS Trade Show 2026, Science Station bridges traditional laboratory concepts with digital innovation, making science accessible, experiential, and intellectually stimulating.
+      </p>
+
+    </div>
+  </div>
+</section>
+
     <!-- ═══════════════════════════════════════════
          WHY THIS INITIATIVE?
     ════════════════════════════════════════════════ -->
@@ -52,9 +68,9 @@ About Science Station – National Science Day 2026 Interactive Exhibition
     <section class="section">
   <div class="section__inner">
     <div class="section__body">
-      <p class="section__text section__text--large">
-        Science Station is an interactive science exhibition presented during National Science Day 2026 in Chennai. Designed to make science experiential and immersive, the initiative features Raman Effect demonstrations, live titration experiments, virtual reality simulations, and engaging scientific storytelling.
-      </p>
+      <p class="section__text">
+National Science Day commemorates the discovery of the Raman Effect by Sir C.V. Raman — a discovery that reshaped modern physics. While the day celebrates scientific achievement, Science Station transforms that celebration into participation, allowing visitors to experience the principles behind the discovery firsthand.
+</p>
     </div>
   </div>
 </section>
@@ -89,6 +105,10 @@ About Science Station – National Science Day 2026 Interactive Exhibition
             Science Station is built around experiences that do more than showcase — they immerse. Each station is designed to collapse the boundary between spectator and scientist.
           </p>
 
+          <p class="section__text">
+At Science Station, every exhibit is structured around active participation. Visitors are not passive observers but collaborators in experimentation — engaging directly with chemistry, physics, and digital simulation.
+</p>
+
           <div class="cards">
 
             <article class="card fade-in">
@@ -100,7 +120,9 @@ About Science Station – National Science Day 2026 Interactive Exhibition
             <article class="card fade-in" style="animation-delay:.12s">
               <div class="card__icon">🔬</div>
               <h3 class="card__title">Raman Setup</h3>
-              <p class="card__desc">A live demonstration of Raman spectroscopy honours the discovery it is named for. Visitors scatter light through samples and witness how molecular fingerprints are revealed — the same technique now used to identify cancer cells and authenticate gemstones.</p>
+              <p class="card__desc"> A live Raman Effect demonstration honours the Nobel Prize-winning discovery of Sir C.V. Raman. 
+                Visitors observe how light scattering reveals molecular fingerprints — the same principle 
+                applied today in medical diagnostics and material science. </p>
             </article>
 
             <article class="card fade-in" style="animation-delay:.24s">
@@ -158,6 +180,11 @@ About Science Station – National Science Day 2026 Interactive Exhibition
           <p class="section__text section__text--large">
             The next generation of scientists will not be made in classrooms alone. They will be shaped by the moments that made science feel urgent, personal, and alive — by the experiment they ran themselves, the question nobody laughed at, the idea they were trusted to pursue.
           </p>
+
+          <p class="section__text">
+Through its presence at National Science Day 2026 in Chennai, Science Station aims to inspire a new
+            generation of scientific thinkers who view experimentation as empowerment.
+</p>
           <p class="section__text">
             Science Station is building toward a world where that kind of engagement is not a special event, but an expectation. Where wonder is a policy. Where every National Science Day is not a celebration of the past, but a rehearsal for the future.
           </p>
