--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
       </button>
 
       <ul class="nav-menu" id="navMenu">
-        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="about.html" class="nav-link">About</a></li>
         <li><a href="blog.html" class="nav-link">Blog</a></li>
         <li><a href="contact.html" class="nav-link">Contact</a></li>
         <li><a href="#features" class="nav-link">Science Exhibits</a></li>
