--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <title>
-Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
+Science Station – National Science Day 2026 Chennai | ZS Trade Show 
 </title>
   <meta name="description" content="Experience Science Station at National Science Day 2026 – an interactive science exhibition booth featuring live titration demonstrations,
     Raman Effect concepts, immersive VR science experiences, and educational science memes." />
-  <meta name="keywords" content="National Science Day 2026, science exhibition booth, interactive science stall, 
-    Raman Effect demo, titration experiment, VR science experience, science memes explained" />
+  
 
   <meta name="google-site-verification" content="2whmG4C4TLPjBYQ-kxrLXzUNFqwLRfiEMMRJXEBq3P8" />
   <meta name="google-site-verification" content="wxtNDGMtQQc3NZcBytH3ipyzdHbHmURha-dZsEk5GqA" />
@@ -29,7 +28,7 @@ Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
 
 </script>
 
-  <script type="application/ld+json">
+ <script type="application/ld+json">
 {
  "@context": "https://schema.org",
  "@type": "BreadcrumbList",
@@ -37,7 +36,7 @@ Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
    "@type": "ListItem",
    "position": 1,
    "name": "Science Station",
-   "item": "https://mmegakalai19-bit.github.io/science-station/"
+   "item": "https://science-station.vercel.app/"
  }]
 }
 </script>
@@ -47,11 +46,10 @@ Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Exo+2:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="index.css"/>
- <link rel="canonical" href="https://science-station.vercel.app//" />
+ <link rel="canonical" href="https://science-station.vercel.app/" />
   
   <meta property="og:title" content="Science Station – National Science Day 2026">
 <meta property="og:description" content="Interactive science exhibition booth with VR, Raman Effect, and live titration demonstrations.">
-<meta property="og:type" content="website">
  <meta property="og:url" content="https://science-station.vercel.app/">
 <meta property="og:image" content="https://science-station.vercel.app/favicon.png">
 <meta property="og:type" content="website">
@@ -282,7 +280,7 @@ Science Station ZS Trade Show 2026 Chennai | National Science Day Exhibition
        ============================================= -->
   <nav class="navbar" role="navigation">
     <div class="nav-container">
-     <a href="index.html" class="nav-logo">SCIENCE STATION</a>
+    <a href="/" class="nav-logo">SCIENCE STATION</a>
       
       <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleMenu()">
         <span></span>
@@ -351,9 +349,11 @@ Science Station – ZS Trade Show 2026 National Science Day Exhibition
       <h2 id="about-heading" class="section-title">
         Redefining How<br /><span class="accent-purple">Science Feels</span>
       </h2>
-     
+     <p class="about-text">
+Science Station is an interactive science exhibition presented during National Science Day 2026 in Chennai and showcased at the ZS Trade Show 2026. The experience combines live titration demonstrations, Raman Effect experiments, immersive VR simulations, and engaging scientific storytelling to make learning experiential and memorable.
+</p>
         <p class="about-text">
-Science Station is an interactive science exhibition booth designed for National Science Day 2026. This immersive experience combines live titration demonstrations, 
+ This immersive experience combines live titration demonstrations, 
           Raman Effect concept exploration, VR science simulations, and educational science memes to make scientific learning engaging and memorable.
 </p>
        <p class="about-text">
