--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact – Science Station</title>
+  <title>
+Contact Science Station | ZS Trade Show 2026 Chennai – National Science Day Exhibition
+</title>
+
+  <meta name="description" content="Contact Science Station regarding the National Science Day 2026
+    interactive science exhibition at ZS Trade Show 2026 Chennai. Inquiries about Raman Effect demonstrations,
+    VR science experiences, and live titration experiments are welcome." />
+    <link rel="canonical" href="https://science-station.vercel.app/contact.html" />
+
+  <meta property="og:title" content="Contact Science Station – National Science Day 2026 Chennai">
+<meta property="og:description" content="Reach out regarding Science Station at ZS Trade Show 2026 Chennai. Interactive science exhibition with Raman Effect, VR, and live experiments.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://science-station.vercel.app/contact.html">
+<meta property="og:image" content="https://science-station.vercel.app/favicon.png">
+
+  
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&family=Space+Mono:wght@400;700&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet" />
+
+  <script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "Organization",
+ "name": "Science Station",
+ "url": "https://science-station.vercel.app/",
+ "contactPoint": {
+   "@type": "ContactPoint",
+   "contactType": "Exhibition Inquiry",
+   "email": "yourname@email.com"
+ }
+}
+</script>
   <style>
     /* ===========================
        RESET & BASE
@@ -413,8 +442,12 @@
   <nav class="nav">
     <div class="nav-brand">SCIENCE STATION</div>
     <div class="nav-links">
-      <a href="index.html">Quiz</a>
-      <a href="#" class="nav-active">Contact</a>
+      <a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="exhibits.html">Exhibits</a>
+<a href="quiz.html">Quiz</a>
+<a href="contact.html" class="nav-active">Contact</a>
+      
     </div>
   </nav>
 
@@ -425,11 +458,19 @@
     <div class="orb orb2"></div>
     <div class="hero-content">
       <div class="badge">🔭 National Science Day</div>
-      <h1>Contact &amp;<br /><span class="accent">Project Information</span></h1>
-      <p class="hero-sub">Learn more about the Science Station initiative.</p>
+      <h1>
+Contact<br>
+<span class="accent">Science Station</span>
+</h1>
+<p class="hero-sub">
+National Science Day 2026 – ZS Trade Show Chennai
+</p>
       <p class="hero-body">
         Science Station is an interactive National Science Day initiative designed to ignite curiosity through scientific thinking, immersive learning, and hands-on innovation. Explore the journey from foundational science to digital frontiers — all in one booth.
       </p>
+      <p class="hero-body">
+Science Station is proudly presented at the ZS Trade Show 2026 in Chennai as part of the National Science Day celebration. This exhibition features Raman Effect demonstrations, live titration experiments, immersive VR science simulations, and interactive learning experiences.
+</p>
     </div>
   </section>
 
@@ -445,6 +486,12 @@
       </div>
     </div>
   </section>
+<!-- internal links  -->
+  <p>
+Explore our <a href="index.html">Science Station Home Page</a>, 
+discover the <a href="exhibits.html">Interactive Science Exhibits</a>, 
+or test your knowledge in the <a href="quiz.html">National Science Day Quiz</a>.
+</p>
 
   <!-- ORGANIZER -->
   <section class="section">
@@ -454,7 +501,7 @@
       <div class="info-card">
         <div class="info-row">
           <span class="info-key">Name</span>
-          <span class="info-val">[Your Name]</span>
+<span class="info-val">Sadhana</span>
         </div>
         <div class="info-divider"></div>
         <div class="info-row">
@@ -483,7 +530,7 @@
       <p class="connect-intro">Have questions about Science Station? Want to collaborate or learn more? Reach out through any of the channels below.</p>
       <div class="connect-grid">
 
-        <a href="mailto:yourname@email.com" class="connect-card">
+        <a href="mailto:sadhana@email.com" class="connect-card">
           <div class="connect-icon">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
               <rect x="2" y="4" width="20" height="16" rx="2"/>
@@ -521,7 +568,7 @@
           </div>
           <div class="connect-info">
             <div class="connect-type">GitHub</div>
-            <div class="connect-val">github.com/yourusername</div>
+            <div class="connect-val">"https://github.com/sadhana73"</div>
           </div>
           <div class="connect-arrow">→</div>
         </a>
