--- a/contact.html
+++ b/contact.html
@@ -206,6 +206,7 @@ Contact Science Station | ZS Trade Show 2026 Chennai – National Science Day Ex
       color: #7ea0c0;
       line-height: 1.85;
       max-width: 640px;
+      margin-bottom: 16px;
     }
 
     /* ===========================
@@ -260,6 +261,34 @@ Contact Science Station | ZS Trade Show 2026 Chennai – National Science Day Ex
       line-height: 1.85;
       padding-left: 20px;
       border-left: 2px solid rgba(0,212,255,0.2);
+    }
+
+    /* ===========================
+       INTERNAL LINKS
+       =========================== */
+    .internal-links-section {
+      width: 100%;
+      padding: 48px 8vw;
+      background: var(--navy);
+      border-top: 1px solid rgba(0,212,255,0.06);
+    }
+
+    .internal-links-section p {
+      max-width: 860px;
+      font-size: clamp(16px, 1.5vw, 18px);
+      color: #7ea0c0;
+      line-height: 1.8;
+    }
+
+    .internal-links-section a {
+      color: var(--cyan);
+      text-decoration: none;
+      transition: opacity 0.2s;
+    }
+
+    .internal-links-section a:hover {
+      opacity: 0.75;
+      text-decoration: underline;
     }
 
     /* ===========================
@@ -421,6 +450,7 @@ Contact Science Station | ZS Trade Show 2026 Chennai – National Science Day Ex
       .nav-links { gap: 20px; }
       .hero { padding: 120px 5vw 80px; }
       .section { padding: 70px 5vw; }
+      .internal-links-section { padding: 40px 5vw; }
       .info-row { padding: 20px 22px; gap: 16px; }
       .info-divider { margin: 0 22px; }
       .info-key { min-width: 86px; }
@@ -443,11 +473,10 @@ Contact Science Station | ZS Trade Show 2026 Chennai – National Science Day Ex
     <div class="nav-brand">SCIENCE STATION</div>
     <div class="nav-links">
       <a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="exhibits.html">Exhibits</a>
-<a href="quiz.html">Quiz</a>
-<a href="contact.html" class="nav-active">Contact</a>
-      
+      <a href="about.html">About</a>
+      <a href="exhibits.html">Exhibits</a>
+      <a href="quiz.html">Quiz</a>
+      <a href="contact.html" class="nav-active">Contact</a>
     </div>
   </nav>
 
@@ -459,18 +488,18 @@ Contact Science Station | ZS Trade Show 2026 Chennai – National Science Day Ex
     <div class="hero-content">
       <div class="badge">🔭 National Science Day</div>
       <h1>
-Contact<br>
-<span class="accent">Science Station</span>
-</h1>
-<p class="hero-sub">
-National Science Day 2026 – ZS Trade Show Chennai
-</p>
+        Contact<br>
+        <span class="accent">Science Station</span>
+      </h1>
+      <p class="hero-sub">
+        National Science Day 2026 – ZS Trade Show Chennai
+      </p>
       <p class="hero-body">
         Science Station is an interactive National Science Day initiative designed to ignite curiosity through scientific thinking, immersive learning, and hands-on innovation. Explore the journey from foundational science to digital frontiers — all in one booth.
       </p>
       <p class="hero-body">
-Science Station is proudly presented at the ZS Trade Show 2026 in Chennai as part of the National Science Day celebration. This exhibition features Raman Effect demonstrations, live titration experiments, immersive VR science simulations, and interactive learning experiences.
-</p>
+        Science Station is proudly presented at the ZS Trade Show 2026 in Chennai as part of the National Science Day celebration. This exhibition features Raman Effect demonstrations, live titration experiments, immersive VR science simulations, and interactive learning experiences.
+      </p>
     </div>
   </section>
 
@@ -486,12 +515,15 @@ Science Station is proudly presented at the ZS Trade Show 2026 in Chennai as par
       </div>
     </div>
   </section>
-<!-- internal links  -->
-  <p>
-Explore our <a href="index.html">Science Station Home Page</a>, 
-discover the <a href="exhibits.html">Interactive Science Exhibits</a>, 
-or test your knowledge in the <a href="quiz.html">National Science Day Quiz</a>.
-</p>
+
+  <!-- INTERNAL LINKS -->
+  <div class="internal-links-section">
+    <p>
+      Explore our <a href="index.html">Science Station Home Page</a>, 
+      discover the <a href="exhibits.html">Interactive Science Exhibits</a>, 
+      or test your knowledge in the <a href="quiz.html">National Science Day Quiz</a>.
+    </p>
+  </div>
 
   <!-- ORGANIZER -->
   <section class="section">
@@ -501,7 +533,7 @@ or test your knowledge in the <a href="quiz.html">National Science Day Quiz</a>.
       <div class="info-card">
         <div class="info-row">
           <span class="info-key">Name</span>
-<span class="info-val">Sadhana</span>
+          <span class="info-val">Sadhana</span>
         </div>
         <div class="info-divider"></div>
         <div class="info-row">
